--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 				    <i class="icon fas fa-mobile-alt"></i>
                                 <span aria-hidden="true" class="icon icon_lifesaver"></span>
                             </div><!--//icon-holder-->
-                            <h3 class="title">2. Android/iPhone Mobile Camera As a Webcam Source for uCode software</h3>
+                            <h3 class="title">2. How-To Android/iPhone Mobile Camera As a Webcam Source for uCode software</h3>
                             <p class="intro">Turn your Android/iPhone mobile camera as a webcam source for uCode software used during machine learning training!</p>
                             <img src="./assets/images/2.png" alt="aicar" width="100">
 			    <a class="link" href="https://vincentk16.github.io/2.%20Android_iPhone%20Mobile%20Camera%20As%20a%20Webcam%20Source%20for%20uCode%20software.pdf" target="_blank"><span></span></a>
@@ -135,7 +135,7 @@
 				    <i class="icon fas fa-car"></i>
                                 <span aria-hidden="true" class="icon icon_gift"></span>
                             </div><!--//icon-holder-->
-                            <h3 class="title">4. Train Machine Learning model for AI Car in uCode for road signs classification</h3>
+                            <h3 class="title">4. How-To Train Machine Learning model for AI Car in uCode for road signs classification</h3>
                             <p class="intro">Learn how to train simple machine learning model for AI car to recognize different road signs!</p>
 			     <img src="./assets/images/3.png" alt="bt" width="100">
                             <a class="link" href="https://vincentk16.github.io/4.%20Train%20Machine%20Learning%20model%20for%20AI%20Car%20in%20uCode%20for%20road%20signs%20classification.pdf" target="_blank"><span></span></a>
