--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     </div><!--//item-->
                 </div><!--//cards-->
 		 <div class="cta-container">
-			 <p> 00:00 - Intro </p?
+			 <p> 00:00 - Intro </p>
 			 <iframe width="560" height="315" src="https://www.youtube.com/embed/MFDubNtBQIE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			    
                    
