--- a/index.html
+++ b/index.html
@@ -142,16 +142,10 @@
                         </div><!--//item-inner-->
                     </div><!--//item-->
                 </div><!--//cards-->
-		
+		    <h4>General flow for the hands on session! </h4>
 	       <iframe width="560" height="315" src="https://www.youtube.com/embed/MFDubNtBQIE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			   
-		    <p><b>Timestamps</b></p>
-		    <p>00:00 - Intro </p><br>
-			<p>00:21 - Data Collections on play field (forward & left)</p><br>
-			<p>03:03 - Training of Data </p><br>
-			<p>03:27 - Verification of model classification result </p><br>
-			<p>03:48 - Coding your AI Car in uCode </p><br>
-			<p>05:59 - Show Time!</p><br>
+		    <p><i> Please view the video on YouTube if you plan to navigate accordingly to sections </i></p>
 		
 		    <br></br>
 		<div class="cta-container">
