--- a/index.html
+++ b/index.html
@@ -153,6 +153,11 @@
 		    <br></br>
 		<div class="cta-container">
 			   
+                        <a class="btn btn-primary btn-cta" href="https://sjcosmofuture-my.sharepoint.com/:p:/p/vincentkok/ESDnI6g44WxCut0nNNxUQPoBoktlQ6JiVIUdGTBOWAIorw?e=rAFCmA" target="_blank"><i class="fas fa-cloud-
+				-alt"></i> Tips and Tricks for Hands On </a>
+                    </div><!--//cta-container-->
+		<div class="cta-container">
+			   
                         <a class="btn btn-primary btn-cta" href="https://sjcosmofuture-my.sharepoint.com/:w:/p/vincentkok/EcfC_iE-tFlIn7-EDFWMAZABNrmz9spf2pOyToadMXqLrg?e=Ujgg7X" target="_blank"><i class="fas fa-cloud-
 				-alt"></i> Frequently Asked Questions (FAQs) </a>
                     </div><!--//cta-container-->
