--- a/index.html
+++ b/index.html
@@ -143,7 +143,9 @@
                     </div><!--//item-->
                 </div><!--//cards-->
 		    <h4>General flow for the hands on session! </h4>
-	       <iframe width="560" height="315" src="https://www.youtube.com/embed/MFDubNtBQIE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	       <div class="responsive">
+		    <iframe width="560" height="315" src="https://www.youtube.com/embed/MFDubNtBQIE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		    </div>
 			   
 		    <p><i> Please view the video on YouTube if you plan to navigate accordingly to sections </i></p>
 		    <img src="./assets/images/milestone.png" alt="bt" width="700" class="responsive">
