--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
                 </div><!--//branding-->
                 <div class="tagline">
                     <h3>All you need to get started for Autonomous Vehicles Workshop! </h3>
+			
+		    <iframe width="560" height="315" src="https://www.youtube.com/embed/TtUtTvX4Xik?start=4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			
 	            <img src="./assets/images/credits.png" alt="credits" width="1000" height="137" class="responsive">
 			<br> </br>
 		    <h5><i>Jointly developed by ITE and SJ Cosmo Future in collaboration with Science Centre Singapore! </i></h5>
