--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="tagline">
                     <h3>All you need to get started for Autonomous Vehicles Workshop! </h3>
 			
-		    <iframe width="560" height="315" src="https://www.youtube.com/embed/TtUtTvX4Xik?autoplay=1?start=4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		    <div style="width:100%;height:0;padding-bottom:56%;position:relative;"><iframe src="https://giphy.com/embed/yent3DAyuUmqBo0ZKo" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div><p><a href="https://giphy.com/gifs/yent3DAyuUmqBo0ZKo">via GIPHY</a></p>
 			
 	            <img src="./assets/images/credits.png" alt="credits" width="1000" height="137" class="responsive">
 			<br> </br>
