--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 				-alt"></i> Frequently Asked Questions (FAQs) </a>
                     </div><!--//cta-container-->
 		<br></br>
-                <p> If you had any problems accessing the resources, please contact Vincent at <u>vincentkok@sjcosmofuture.com</u>. Thank you! </p>
+                <p> If you had any problems accessing the resources, please contact SJ Cosmo Future at <u>sales@sjcosmofuture.com</u>. Thank you! </p>
 		<a href="https://www.facebook.com/ubtechrobotics.ap" target="blank" class="social-margin"> 
                   <div class="social-icon facebook">
                     <i class="fa fa-facebook" aria-hidden="true"></i> 
